--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,11 @@ h1 {
 
 .scoreDisplay {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .score {
-  margin-right: 10px;
   margin-bottom: 8px;
 }
 
@@ -87,7 +87,7 @@ h1 {
   gap: 5px;
   width: 150px;
   height: 150px;
-  margin-right: 250px;
+  margin-right: 20px;
 }
 
 .arrow-key {
@@ -144,7 +144,7 @@ h1 {
   font-size: 14px;
   cursor: pointer;
   border-radius: 4px;
-  margin-left: -80px;
+  margin: 0 10px;
 }
 
 .popup {
