--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,118 @@
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #4CAF50;
+  background-image: linear-gradient(to bottom right, #307232, #307232);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #game-container {
+  position: fixed;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: grid;
   grid-template-rows: auto 1fr auto;
-  justify-content: center;
-  margin-top: 20px;
-  background-color: white;
-  border-radius: 10px;
+  justify-content:center;
+  margin-top: -29px;
+  background-color: rgba(255, 255, 255, 0.8);
+  background-image: url('../images/jungle.jpg');
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border-radius: 30px;
   padding: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  color: #333;
+  mar
 }
 
 #game-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 h1 {
   margin: 0;
-  color: #333;
+  color: white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 3.5em;
+  width: 200px;
+  word-spacing: 200px;
+  margin-top: 50px;
+  margin-left: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.scoreDisplay {
+.scoreDisplay,
+.time-left {
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.scoreDisplay .score,
+.time-left .remaining {
+  font-family: 'Arial Black', sans-serif;
+  font-size: 22px;
+  color: #fff;
+  margin: 0 5px;
+  margin-top: 130px;
+}
+
+.scoreDisplay,
+.time-left {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 20px;
 }
 
-.score {
-  margin-bottom: 8px;
-}
 
 .time-left {
-  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: -9px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.time-left .remaining {
+  font-family: 'Arial Black', sans-serif;
+  font-size: 22px;
+  color: #fff;
+  margin: 0 5px;
 }
 
 #mute-btn {
-  background-color: transparent;
+  background-color: #FFC107;
   border: none;
-  font-size: 24px;
+  font-size: 36px;
   cursor: pointer;
   outline: none;
+  color: #4CAF50;
+  padding: 10px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+#mute-btn:hover {
+  transform: scale(1);
 }
 
 .grid {
@@ -58,51 +122,79 @@ h1 {
   width: 400px;
   height: 400px;
   margin: 0 auto;
+  background-color: #8BC34A;
+  border: 8px solid #4CAF50;
+  margin-top: -30px;
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .square {
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  background-color: #DCEDC8;
+  border: 2px solid #C5E1A5;
+  transition: background-color 0.3s ease;
 }
 
 .snake {
-  background-color: green;
+  background-color: #2E7D32;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.snake-eat {
+  background-color: #FF9800;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.snake-gameover {
+  background-color: #000000;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .apple {
   background-color: red;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  animation: appleAppear 0.5s ease;
 }
+
 
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 3px;
+  margin-top: 20px;
 }
 
 .arrow-keys {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 5px;
+  gap: 10px;
   width: 150px;
   height: 150px;
   margin-right: 20px;
 }
 
 .arrow-key {
-  background-color: #eee;
+  background-color: #307232;
   border: none;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 24px;
-  color: #333;
+  color: #fff;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .arrow-key:hover {
-  background-color: #ddd;
+  background-color: #45a049;
+  transform: scale(1.1);
 }
 
 .arrow-key.top {
@@ -133,18 +225,27 @@ h1 {
   border-bottom-right-radius: 50%;
 }
 
-#pause-btn {
-  background-color: #4CAF50;
-  color: white;
+#pause-btn,
+#start-game-btn {
+  background-color: #FFC107;
+  color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 12px 24px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 30px;
   margin: 0 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#pause-btn:hover,
+#start-game-btn:hover {
+  background-color: #FFA000;
+  transform: translateY(-2px);
 }
 
 .popup {
@@ -154,9 +255,10 @@ h1 {
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
-  padding: 20px;
-  border-radius: 5px;
+  padding: 30px;
+  border-radius: 20px;
   text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .hidden {
@@ -164,18 +266,106 @@ h1 {
 }
 
 .playAgain {
-  margin-top: 10px;
-  background-color: #4CAF50;
-  color: white;
+  margin-top: 20px;
+  background-color: #FFC107;
+  color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 12px 24px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 30px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
+.playAgain:hover {
+  background-color: #FFA000;
+  transform: translateY(-2px);
+}
 
+#show-instructions-btn {
+  background-color: #FFC107;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  outline: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  margin-left: 10px;
+}
 
+#show-instructions-btn:hover {
+  transform: scale(1.1);
+}
+
+#show-instructions-btn {
+  margin-top: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+#side-panel {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  max-height: 80vh;
+  overflow-y: auto;
+  z-index: 999;
+}
+
+#close-instructions-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  #game-header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  h1 {
+    font-size: 2em;
+    margin-top: 20px;
+    margin-left: 0;
+    word-spacing: normal;
+  }
+
+  .scoreDisplay,
+  .time-left {
+    font-size: 16px;
+    margin-left: 0;
+  }
+
+  .scoreDisplay .score,
+  .time-left .remaining {
+    font-size: 20px;
+    margin-top: 0;
+  }
+
+  #show-instructions-btn {
+    margin-top: 0;
+    margin-right: 10px;
+  }
+}
