--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,15 @@ body {
 }
 
 #game-container {
-  position: fixed;
+  position: absolute;
   top: 53%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: grid;
   grid-template-rows: auto 1fr auto;
   justify-content:center;
+  width: 100%;
+  max-width: 500px;
   margin-top: -29px;
   background-color: rgba(255, 255, 255, 0.8);
   background-image: url('../images/jungle.jpg');
@@ -29,7 +31,6 @@ body {
   padding: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   color: #333;
-  mar
 }
 
 #game-header {
